--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,14 +1,7 @@
 image:
   file: .gitpod.Dockerfile
-
-# List the ports you want to expose and what to do when they are served. See https://www.gitpod.io/docs/43_config_ports/
-ports:
-- port: 3000
-
-# List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
-tasks:
-- init: echo 'init script' # runs during prebuild
-  command: echo 'start script'
 vscode:
   extensions:
     - adelphes.android-dev-ext@0.8.0:z3IVaDRzKS8IeFWrhyaPAA==
+    - mpotthoff.vscode-android-webview-debug@1.1.1:TY2OLKxxIJSs2lt3TgOpjw==
+    - DiemasMichiels.emulate@1.3.0:sXCoQONS3kXpSTBuMnxkyQ==
