--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -20,8 +20,11 @@ github:
     addLabel: true
 ports:
   - port: 5900
+    onOpen: ignore
   - port: 6080
+    onOpen: ignore
   - port: 35900
+    onOpen: ignore
 vscode:
   extensions:
     - adelphes.android-dev-ext@0.8.0:z3IVaDRzKS8IeFWrhyaPAA==
