--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -20,6 +20,7 @@ github:
     addLabel: true
 tasks:
   - command: /opt/android-studio/bin/studio.sh
+  - command: echo "Hello"
 ports:
   - port: 5900
     onOpen: ignore
